<resources>
    <string name="app_name">Desenho Mágico</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_almoxarifado">Almoxarifado</string>
    <string name="title_activity_entrega">EntregaActivity</string>
    <string name="title_activity_menu_entrega_recebimento"> </string>
    <string name="btnEntrega">Entrega</string>
    <string name="title_activity_menu_locacao">MenuLocacaoActivity</string>
    <string name="btnRecebimento">Recebimento</string>
    <string name="btnLocar">Locar</string>
    <string name="btnDevolver">Devolver</string>
    <string name="title_activity_locar">LocarActivity</string>
    <string name="hintQuantidade">Informe a quantidade</string>
    <string name="hintContrato">Contrato</string>
    <string name="hintValorLocacao">Valor da locação</string>
    <string name="title_activity_manutencao">Manutenção</string>
    <string name="Veículos">Veículos</string>
    <string name="equipamento">Equipamentos</string>
    <string name="title_activity_veiculos">Veiculos</string>
    <string name="hint_informar_hodometro">Informe o hodômetro ou Horimetro</string>
    <string name="hint_informar_tipo_manutencao">Informe o tipo de manutencao</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="title_activity_equipamentos">Equipamentos</string>
    <string name="title_activity_cadastro_veiculo">Cadastrode veículos</string>
    <string name="hint_informe_placa">Informe a placa do veículo</string>
    <string name="hint_informe_marca">Informa a marca do veículo</string>
    <string name="hint_informe_modelo">Informe o modelo do veículo</string>
    <string name="hint_informe_cor">Informe a cor do veículo</string>
    <string name="hint_informe_ano">Informe o ano do veículo</string>
    <string name="hint_informe_data">Informe a data de entrada do veículo</string>

    <!-- Jogo infantil - Desenho Puzzle -->
    <string name="title_activity_desenho_puzzle">Desenho Mágico</string>
    <string name="puzzle_level_title">Nível %1$d: %2$s %3$s</string>
    <string name="puzzle_difficulty">Dificuldade: %1$d estrelas</string>
    <string name="puzzle_score">Pontos: %1$d</string>
    <string name="puzzle_instruction_easy">Arraste as peças coloridas para completar o desenho!</string>
    <string name="puzzle_instruction_hard">Sem dicas! Monte o desenho com as peças certas.</string>
    <string name="puzzle_palette_label">Peças</string>
    <string name="puzzle_btn_reset">Recomeçar</string>
    <string name="puzzle_btn_hint">Dica</string>
    <string name="puzzle_btn_next">Próximo nível</string>
    <string name="puzzle_wrong_color">Ops! Essa cor não vai aí. Tente outra!</string>
    <string name="puzzle_level_complete">Parabéns! Você fez o %1$s %2$s!</string>
    <string name="puzzle_all_complete">Você completou todos os níveis! 🏆</string>
    <string name="puzzle_hint_message">Olhe as cores clarinhas no tabuleiro — elas mostram onde cada peça vai!</string>
</resources>
