<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_cadastro_veiculo"
    tools:context="br.com.bwsmobile.bwsmobile.CadastroVeiculoActivity">

    <EditText
        android:id="@+id/edtCadastPlacaVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informe_placa"
                />

    <EditText
        android:id="@+id/edtCadastMarcaVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_informe_marca"
        />

    <EditText
        android:id="@+id/edtCadastModeloVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_informe_modelo"
        />

    <EditText
        android:id="@+id/edtCadastCorVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_informe_cor"
        />

    <EditText
        android:id="@+id/edtCadastAnoVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/hint_informe_ano"
        />

    <EditText
        android:id="@+id/edtCadastdataEntradaVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="datetime"
        android:hint="@string/hint_informe_data"
        />

    <Button
        android:id="@+id/btnCadastroVeiculo"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:hint="@string/btnSalvar"
        />

</LinearLayout>
