<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_veiculos"
    tools:context="br.com.bwsmobile.bwsmobile.VeiculosActivity">

    <Spinner
        android:id="@+id/spinnerSelecionaVeiculo"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <EditText
        android:id="@+id/edtInformeHodometro"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informar_hodometro"/>

    <EditText
        android:id="@+id/edtInformemanutencao"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informar_tipo_manutencao"/>

    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_informar_hodometro"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnVeiculosSalvar"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/btnSalvar"
            />

        <Button
            android:id="@+id/btnVeiculosCancelar"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/btnCancelar"
            />

    </LinearLayout>



</LinearLayout>
