<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_locar" tools:context="br.com.bwsmobile.bwsmobile.LocarActivity">

    <Spinner
        android:id="@+id/spinnerFornecedoresLocar"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Spinner
        android:id="@+id/spinneritensLocar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edtQuantidadeLocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hintQuantidade"
        />

    <EditText
        android:id="@+id/edtContratoLocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hintContrato"
        />

    <EditText
        android:id="@+id/edtValorLocacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hintValorLocacao"
        />

    <Spinner
        android:id="@+id/spinnerPrazoLocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></LinearLayout>
    
    
</LinearLayout>
